--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a href="#beneficios" class="nav-link text-gray-200 font-medium pb-1 text-sm">Beneficios AXA</a>
                 <a href="#colaboracion" class="nav-link text-gray-200 font-medium pb-1 text-sm">Colaboración</a>
             </div>
-            <a href="#colaboracion" class="hidden md:block bg-teal-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-teal-700 transition-colors text-sm">Contactar</a>
+            <a href="mailto:admin@fisiotenua.com" class="hidden md:block bg-teal-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-teal-700 transition-colors text-sm">Contactar</a>
         </nav>
     </header>
 
@@ -324,7 +324,7 @@
                 <span>Tel: 238-0902 / 6761-3325</span>
                 <span class="hidden md:inline">|</span>
                 <br class="md:hidden">
-                <span>Email: info@centrotenua.com</span>
+                <span>Email: admin@fisiotenua.com</span>
                 <span class="hidden md:inline">|</span>
                 <br class="md:hidden">
                 <span>Web: www.centrotenua.com</span>
